make sure buttons have vertical spacing too

--- a/views/style.css
+++ b/views/style.css
@@ -149,6 +149,7 @@ input[type=file] {
 }
 .honk button {
 	margin-left: 4em;
+	margin-top: 2em;
 }
 .subtle {
 }
